--- a/catalog/view/theme/Demo-Store/template/account/login.twig
+++ b/catalog/view/theme/Demo-Store/template/account/login.twig
@@ -36,8 +36,8 @@
             <p><strong>{{ text_i_am_returning_customer }}</strong></p>
             <form action="{{ action }}" method="post" enctype="multipart/form-data">
               <div class="form-group">
-                <label class="control-label" for="input-email">{{ entry_email }}</label>
-                <input type="text" name="email" value="{{ email }}" placeholder="{{ entry_email }}" id="input-email" class="form-control" />
+                <label class="control-label" for="input-email">Enter E-Mail / Mobile</label>
+                <input type="text" name="email" value="{{ email }}" placeholder="Enter E-Mail / Mobile" id="input-email" class="form-control" />
               </div>
               <div class="form-group">
                 <label class="control-label" for="input-password">{{ entry_password }}</label>
