--- a/catalog/view/theme/default/template/account/account.twig
+++ b/catalog/view/theme/default/template/account/account.twig
@@ -52,10 +52,10 @@
         <li><a href="{{ tracking }}">{{ text_tracking }}</a></li>
         {% endif %}
       </ul>
-      <h2>{{ text_my_newsletter }}</h2>
+      {# <h2>{{ text_my_newsletter }}</h2>
       <ul class="list-unstyled">
         <li><a href="{{ newsletter }}">{{ text_newsletter }}</a></li>
-      </ul>
+      </ul> #}
       {{ content_bottom }}</div>
     {{ column_right }}</div>
 </div>
