--- a/admin/view/template/marketing/contact.twig
+++ b/admin/view/template/marketing/contact.twig
@@ -39,7 +39,7 @@
             <label class="col-sm-2 control-label" for="input-to">{{ entry_to }}</label>
             <div class="col-sm-10">
               <select name="to" id="input-to" class="form-control">
-                <option value="newsletter">{{ text_newsletter }}</option>
+                {# <option value="newsletter">{{ text_newsletter }}</option> #}
                 <option value="customer_all">{{ text_customer_all }}</option>
                 <option value="customer_group">{{ text_customer_group }}</option>
                 <option value="customer">{{ text_customer }}</option>
