--- a/catalog/view/theme/default/template/account/register.twig
+++ b/catalog/view/theme/default/template/account/register.twig
@@ -256,7 +256,7 @@
               {% endif %} </div>
           </div>
         </fieldset>
-        <fieldset>
+        {#<fieldset>
           <legend>{{ text_newsletter }}</legend>
           <div class="form-group">
             <label class="col-sm-2 control-label">{{ entry_newsletter }}</label>
@@ -276,7 +276,7 @@
                 {{ text_no }}</label>
               {% endif %} </div>
           </div>
-        </fieldset>
+        </fieldset>#}
         {{ captcha }}
         {% if text_agree %}
         <div class="buttons">
