--- a/catalog/view/theme/Demo-Store/stylesheet/stylesheet.css
+++ b/catalog/view/theme/Demo-Store/stylesheet/stylesheet.css
@@ -240,7 +240,7 @@ div.required .control-label:before {
 }
 .outstock .img-responsive{filter: opacity(30%);}
 .footer-blocks .col-sm-3 {
-	width: 20%;
+    width: 25%;
 }
 .footer-area ul li {
 	display: inline-block;
@@ -8514,9 +8514,6 @@ div#tab-specification .table.table-bordered tbody tr td ul li{
 .mt-15{
 	margin-top: 15px;
 }
-.img123{
-	width: ;
-}
 @media (max-width: 1440px){
 
 }
@@ -8743,9 +8740,7 @@ div#tab-specification .table.table-bordered tbody tr td ul li{
 	color: #2874f0;
 	text-decoration: underline;
 }
-form .form-group .control-label{
-	white-space: nowrap;
-}
+
 @media (max-width: 768px){
 	.otp-grp input.otp-tele{
 		width: 50%;
@@ -8835,4 +8830,7 @@ form .form-control{
 .return_policy tr td:first-child, .return_policy tr th:first-child {
 	text-align: center !important;
 	font-size: 18px !important;
+}
+.Otp_verification_label{
+	color: #05ad02;
 }
