--- a/catalog/view/theme/default/template/account/register.twig
+++ b/catalog/view/theme/default/template/account/register.twig
@@ -65,9 +65,9 @@
               {% endif %} </div>
           </div>
           <div class="form-group required otp-grp">
-            <label class="col-sm-2 control-label" for="input-telephone">{{ entry_telephone }}</label>
+            <label class="col-sm-2 control-label" for="input-telephone">{{ entry_telephone }} <span class="Otp_verification_label d-none" for="">(Verified)</span></label>
             <div class="col-sm-10">
-              <input type="tel" name="telephone" value="{{ telephone }}" placeholder="{{ entry_telephone }}" id="input-telephone" class="form-control mobile_number otp-tele" /><label class="Otp_verification_label d-none" for="">Verified</label>
+              <input type="tel" name="telephone" value="{{ telephone }}" placeholder="{{ entry_telephone }}" id="input-telephone" class="form-control mobile_number otp-tele" />
               <input type="button" class="btn btn-primary get_otp" value="Get Otp" />
               {% if error_telephone %}
               <div class="text-danger">{{ error_telephone }}</div>
