--- a/catalog/view/theme/default/template/checkout/register.twig
+++ b/catalog/view/theme/default/template/checkout/register.twig
@@ -32,8 +32,8 @@
         <input type="text" name="email" value="" placeholder="{{ entry_email }}" id="input-payment-email" class="form-control" />
       </div>
       <div class="form-group required otp-grp">
-        <label class="control-label" for="input-payment-telephone">{{ entry_telephone }}</label>
-        <input type="text" name="telephone" value="" placeholder="{{ entry_telephone }}" id="input-payment-telephone" class="form-control mobile_number otp-tele" /><label class="Otp_verification_label d-none" for="">Verified</label>
+        <label class="control-label" for="input-payment-telephone">{{ entry_telephone }} <span class="Otp_verification_label d-none" for="">(Verified)</span></label>
+        <input type="text" name="telephone" value="" placeholder="{{ entry_telephone }}" id="input-payment-telephone" class="form-control mobile_number otp-tele" />
         <input type="button" class="btn btn-primary get_otp" value="Get Otp" /> 
       </div>
       {% for custom_field in custom_fields %}
