--- a/catalog/view/theme/default/template/account/register.twig
+++ b/catalog/view/theme/default/template/account/register.twig
@@ -423,7 +423,7 @@ $('.get_otp,.resend_otp').click(()=>{
                                 // confirmButtonText: 'Yes, delete it!'
                             }).then((result) => {
                                 if (result.isConfirmed) {
-                                    location.reload();
+                                    // location.reload();
                                 }
                             });
                     }
