--- a/catalog/view/theme/Demo-Store/stylesheet/stylesheet.css
+++ b/catalog/view/theme/Demo-Store/stylesheet/stylesheet.css
@@ -7039,6 +7039,10 @@ h4:hover a, h4:focus a {
 		width: 120px;
 	}
 }
+
+.footer-blocks .col-sm-3{
+	width: 20%;
+}
 @media (max-width: 991px){
 	#form-currency .btn-link strong {padding:0 11px 0 6px;}
 	.col-sm-5.product-right {width: 50%;}
