--- a/catalog/view/theme/default/template/checkout/checkout.twig
+++ b/catalog/view/theme/default/template/checkout/checkout.twig
@@ -29,6 +29,16 @@
             <div class="panel-body"></div>
           </div>
         </div>
+        {% if edit_user =="Show Account Edit" %}
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h4 class="panel-title">{{ text_checkout_account }}</h4>
+                </div>
+                <div class="panel-collapse collapse" id="collapse-payment-address">
+                    <div class="panel-body"></div>
+                </div>
+            </div>
+        {% endif %}
         {% if not logged and account != 'guest' %}
         <div class="panel panel-default">
           <div class="panel-heading">
